--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -19,7 +19,8 @@
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-
+    {% block header %}
+    {% endblock %}
   </header>
   <div role="main">
     {% block content %}
