--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title>{% block title %}{% endblock %}</title>
   <meta name="description" content="">
 
   <meta name="viewport" content="width=device-width">
@@ -20,12 +20,19 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
     {% block header %}
+    <h1>NHS Bugs</h1>
     {% endblock %}
+    <nav>
+    </nav>
   </header>
-  <div role="main">
+  <section class="main" role="main">
     {% block content %}
     {% endblock %}
-  </div>
+  </section>
+  <aside>
+    {% block aside %}
+    {% endblock %}
+  </aside>
   <footer>
     {% block extra_footer %}
     {% endblock %}
@@ -34,9 +41,6 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="{{ MEDIA_URL }}/js/libs/jquery-1.7.1.min.js"><\/script>')</script>
-
-  <script src="{{ MEDIA_URL }}js/plugins.js"></script>
-  <script src="{{MEDIA_URL }}js/script.js"></script>
 
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
