--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
-
-
 {% block content %}
-Homepage!
+<p>Homepage!</p>
 
 <section class="popular">
     <h1>Popular Bugs</h1>
