--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -23,6 +23,9 @@
     <h1>NHS Bugs</h1>
     {% endblock %}
     <nav>
+        <ul>
+            <li class="selected">Home</li>
+        </ul>
     </nav>
   </header>
   <section class="main" role="main">
@@ -39,7 +42,7 @@
   </footer>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
   <script>window.jQuery || document.write('<script src="{{ MEDIA_URL }}/js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
   <script>
