--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -3,13 +3,11 @@
 
 
 {% block content %}
-Homepage!
-
 <section class="popular">
     <h1>Popular Bugs</h1>
     <ul class="bugList">
         <li>
-            I'm a bug!
+            <a href="#">I'm a bug!</a>
         </li>
     </ul>
 </section>
@@ -20,7 +18,8 @@ Homepage!
         <label for="title">Title</label>
         <input type="text" id="title" name="title" />
         <label for="description">Description</label>
-        <textarea id="description" name="description"></textarea> 
+        <textarea id="description" name="description"></textarea>
+        <input type="submit" value="Submit Bug" />
     </form>
 </section>
 {% endblock %}
