removed header styling

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -39,17 +39,18 @@
   <footer>
     {% block extra_footer %}
     {% endblock %}
+    <p>All content &copy; nhsbugs.net unless otherwise stated</p>
   </footer>
 
 
   <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
   <script>window.jQuery || document.write('<script src="{{ MEDIA_URL }}/js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-  <script>
+  <!--<script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
     s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
+  </script>-->
 </body>
 </html>
