--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -208,10 +208,6 @@ header {
 header h1 {
     font-weight: 300;
 }
-header nav {
-    background-color: #333;
-    color: #fff;
-}
 header nav ul:after {
     content: '';
     width: 0;
@@ -234,7 +230,7 @@ header nav li.selected:after {
     margin-left: -5px;
     border: 5px solid transparent;
     border-color: transparent;
-    border-bottom-color: #fff;
+    border-bottom-color: #000000;
     border-width: 5px;
 }
 header nav li.selected {
@@ -266,4 +262,10 @@ header h1, header nav, .main {
 .main>section:first-of-type+section {
     box-sizing: border-box;
     padding-left: 20px;
+}
+footer {
+    background-color: #eee;
+    box-shadow: 0 -10px 50px -10px black;
+    text-align: center;
+    color: #666666;
 }
