--- a/nhsbugs/templates/bugs/report.html
+++ b/nhsbugs/templates/bugs/report.html
@@ -8,7 +8,7 @@
     {{ form.errors }}
 {% endif %}
 
-<form action="." method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.title.label }}
     {{ form.title }}<br/>
@@ -16,8 +16,7 @@
     {{ form.description.label }}
     {{ form.description }}<br/>
 
-    {{ form.hospital.label }}
-    {{ form.hospital }}<br/>
+    {{ form.hospital_id }}<br/>
 
     {{ form.pic.label }}
     {{ form.pic }}<br/>
