--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -203,7 +203,7 @@ body {
 }
 header {
     background-color: #eee;
-    box-shadow: 0 40px 50px -50px black, 40px 0 50px -50px #aaa, -40px 0 50px -50px #aaa;
+    box-shadow: 0 -20px 20px 20px #888;
 }
 header h1 {
     font-weight: 300;
@@ -265,7 +265,8 @@ header h1, header nav, .main {
 }
 footer {
     background-color: #eee;
-    box-shadow: 0 -10px 50px -10px black;
+    padding: 20px;
+    box-shadow: inset 0 10px 10px -10px #aaa;
     text-align: center;
     color: #666666;
 }
