Changed navigation styling and added extra dummy markup

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -24,7 +24,8 @@
     {% endblock %}
     <nav>
         <ul>
-            <li class="selected">Home</li>
+            <li class="selected"><a>Home</a></li>
+            <li class="selected"><a>Submit a bug</a></li>
         </ul>
     </nav>
   </header>
