--- a/nhsbugs/templates/bugs/view.html
+++ b/nhsbugs/templates/bugs/view.html
@@ -6,6 +6,11 @@
 
 <h1>{{ bug.title }}</h1>
 
+{% if bug.pic %}
+<img src="{{ MEDIA_URL }}/{{bug.pic}}" width="100" height="100"/>
+{% else %}
+No picture
+{% endif %}
 {{ bug.description }}
 
 {% endblock %}
