--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -201,6 +201,10 @@ body {
     margin: 0;
     padding: 0;
 }
+time {
+    font-size: 0.8em;
+    color: #888;
+}
 header {
     background-color: #eee;
     box-shadow: 0 -20px 20px 20px #888;
@@ -220,6 +224,13 @@ header nav li {
     padding: 10px 20px;
     position: relative;
 }
+header nav li  a, header nav li  a:visited, header nav li  a:link, header nav li a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+header nav li  a:hover {
+    color: #aaa;
+}
 header nav li:first-child {
     padding-left: 0;
 }
@@ -233,9 +244,7 @@ header nav li.selected:after {
     height: 0;
     margin-left: -5px;
     border: 5px solid transparent;
-    border-color: transparent;
     border-bottom-color: #aaa;
-    border-width: 5px;
 }
 header nav li.selected:first-child:after {
     margin-left: -10px;
@@ -264,11 +273,11 @@ header nav {
 .main>section:first-of-type {
     box-sizing: border-box;
     padding-right: 20px;
-    border-right: 1px solid #ccc;
 }
 .main>section:first-of-type+section {
     box-sizing: border-box;
     padding-left: 20px;
+    border-left: 2px solid #ccc;
 }
 footer {
     background-color: #eee;
@@ -276,4 +285,44 @@ footer {
     box-shadow: inset 0 10px 10px -10px #aaa;
     text-align: center;
     color: #666666;
+}
+
+.popular article {
+    padding: 10px 0;
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+}
+.popular article:last-child {
+    border-bottom: none;
+}
+.popular article .thumbnail {
+    height: 50px;
+    float: left;
+    margin-right: 20px;
+}
+.popular article hgroup {
+    clear: right;
+    overflow: hidden;
+}
+.popular article hgroup h2 {
+    float: left;
+    font-size: 1em;
+    font-weight: normal;
+    margin: 0 0 0 10px;
+    color: #888;
+}
+.popular article h1 {
+    margin: 0;
+    float: left;
+}
+.popular article time {
+    float: right;
+    float: right;
+}
+.popular .summary {
+    margin-bottom: 10px;
+}
+.popular .more {
+    float: right;
+    font-size: 0.8em;
 }
