--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -4,11 +4,51 @@
 
 <section class="popular">
     <h1>Popular Bugs</h1>
-    <ul class="bugList">
-        <li>
-            <a href="#">I'm a bug!</a>
-        </li>
-    </ul>
+
+{% for bug in bug_list %}
+    <article>
+        <img class="thumbnail" src="{{ bug.image_src }}" />
+        
+        <hgroup>
+            <h1>{{ bug.title }}</h1>
+            <h2>{{ bug.votes }} votes</h2>
+            <time pubdate>{{ bug.date_submitted }}</time>
+        </hgroup>
+        
+        <p class="summary">{{ bug.summary }}</p>
+        
+        <a href="{{ MEDIA_URL }}bug/{{ bug.slug }}">More information</a>
+    </article>
+{% endfor %}
+
+    <!-- placeholder data. PLEASE DELETE -->
+    <article>
+        <img class="thumbnail" src="http://iloveubuntu.net/sites/default/files/field/image/gwibber%20and%20kazam%201.png" />
+        
+        <hgroup>
+            <h1>Sweating insect</h1>
+            <h2>42 votes</h2>
+            <time pubdate>26th May</time>
+        </hgroup>
+        
+        <p class="summary">I saw a sweating bug. On Google Images</p>
+        
+        <a href="{{ MEDIA_URL }}bug/sweating-bug" class="more">more information</a>
+    </article>
+    
+    <article>
+        <img class="thumbnail" src="http://iloveubuntu.net/sites/default/files/field/image/gwibber%20and%20kazam%201.png" />
+        
+        <hgroup>
+            <h1>Another sweating insect</h1>
+            <h2>42 votes</h2>
+            <time pubdate>26th May</time>
+        </hgroup>
+        
+        <p class="summary">It happened again!</p>
+        
+        <a href="{{ MEDIA_URL }}bug/sweating-bug" class="more">more information</a>
+    </article>
 </section>
 
 <section class="newBug">
