--- a/boilerplate/Mobile/iOS/NHSBugs.net/NHSBugs/GetLocation.xib
+++ b/boilerplate/Mobile/iOS/NHSBugs.net/NHSBugs/GetLocation.xib
@@ -124,7 +124,7 @@
 				<reference key="NSWindow"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MCAwIDAgMC43NwA</bytes>
+					<bytes key="NSRGB">MCAwIDAAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
