--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section class="popular">
+<section class="bugsList">
     <h1>Popular Bugs</h1>
 
 {% for bug in top_bugs %}
