Changes to bug report view

--- a/nhsbugs/templates/bugs/report.html
+++ b/nhsbugs/templates/bugs/report.html
@@ -16,7 +16,8 @@
     {{ form.description.label }}
     {{ form.description }}<br/>
 
-    {{ form.hospital_id }}<br/>
+    {{ form.description.hospital }}
+    {{ form.hospital }}<br/>
 
     {{ form.pic.label }}
     {{ form.pic }}<br/>
