reuing the bug detail template (partial implementation)

--- a/nhsbugs/templates/bugs/view.html
+++ b/nhsbugs/templates/bugs/view.html
@@ -22,4 +22,9 @@ User_Voted: {{ user_vote }}
 
 </article>
 
+
+    <section class="bugsList">
+        {% include 'bugs/detail.html' %}
+    </section>
+
 {% endblock %}
