--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -12,12 +12,8 @@
 
 <section class="newBug">
     <h1>Submit a New Bug</h1>
-    <form action="/bug/submit">
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" />
-        <label for="description">Description</label>
-        <textarea id="description" name="description"></textarea>
-        <input type="submit" value="Submit Bug" />
-    </form>
+
+{% include "bugs/form.html" %}
+
 </section>
 {% endblock %}
