Fixing up bug reporting
Made sure the bug report will work whether you specify hospital or not,
although requires a change to bug/form.html to make sure that it only
hides the hospital (rather than remove it).

--- a/nhsbugs/templates/bugs/report.html
+++ b/nhsbugs/templates/bugs/report.html
@@ -8,7 +8,7 @@
     {{ form.errors }}
 {% endif %}
 
-{% include "bugs/form.html" with hospitalKnown=True %}
+{% include "bugs/form.html" %}
 
 
 {% endblock %}
