--- a/nhsbugs/templates/bugs/form.html
+++ b/nhsbugs/templates/bugs/form.html
@@ -1,4 +1,4 @@
-<form action="/bugs/report" method="POST" enctype="multipart/form-data">
+<form action="/bugs/report/" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.title.label }}
     {{ form.title }}<br/>
@@ -7,6 +7,7 @@
     {{ form.description }}<br/>
 
     {{ form.description.hospital }}
+
 {% ifequal hospitalKnown True %}
    {{ form.hospital }}<br/>
 {% endifequal %}
