--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -31,6 +31,14 @@
     </nav>
   </header>
   <section class="main" role="main">
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     {% block content %}
     {% endblock %}
   </section>
