Fixed reported date in bug detail, made it so bug detail can be passed through so it can be used in multiple contexts

--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -319,7 +319,7 @@ footer {
     float: right;
     float: right;
 }
-.bugsList .summary {
+.bugsList .detail {
     margin-bottom: 10px;
 }
 .bugsList .more {
