--- a/nhsbugs/templates/bugs/form.html
+++ b/nhsbugs/templates/bugs/form.html
@@ -1,14 +1,13 @@
 <form action="/bugs/report/" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.title.label }}
-    {{ form.title }}<br/>
+    
+    <label for="title">Title:</label>
+    <input id="title" name="title" type="text" value="{{ form.cleaned_data.title }}" required />
 
-    {{ form.description.label }}
-    {{ form.description }}<br/>
+    <label for="description">Description:</label>
+    <textarea id="description" name="description">{{ form.cleaned_data.description }}</textarea>
 
-    {{ form.description.hospital }}
-
-{% ifequal hospitalKnown True %}
+{% ifequal hospital_slug none %}
    {{ form.hospital }}<br/>
 {% endifequal %}
 
