Updated bug form markup among other things

--- a/nhsbugs/templates/bugs/detail.html
+++ b/nhsbugs/templates/bugs/detail.html
@@ -1,15 +1,15 @@
+{% load voting_tags %}
 <article>
     {% if bug.pic %}
         <img class="thumbnail" src="{{ MEDIA_URL }}/{{ bug.pic }}" />
     {% endif %}
-
+    
     <hgroup>
         <h1>{{ bug.title }}</h1>
-        <h2>{{ bug.votes }} votes</h2>
         <time pubdate>{{ bug.report_date }}</time>
     </hgroup>
     
-    <p class="detail">{% if description %}{{ description }}{% else %}{{ bug.description }}{% endif %}</p>
+    <p class="detail">{% firstof description bug.description %}</p>
     
     <a href="{% url view_bug slug=bug.slug %}" class="more">More information</a>
 </article>
