--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -5,7 +5,7 @@
 <section class="bugsList">
     <h1>Popular Bugs</h1>
 
-{% for bug in top_bugs %}
+{% for bug in recent_bugs %}
     {% include 'bugs/detail.html' with description=bug.description|truncatechars:50 %}
 {% endfor %}
 </section>
