api fixes and get_score

--- a/nhsbugs/templates/bugs/detail.html
+++ b/nhsbugs/templates/bugs/detail.html
@@ -1,4 +1,5 @@
 <article>
+    {{ bug.get_score }}
     {% if bug.pic %}
         <img class="thumbnail" src="{{ MEDIA_URL }}/{{ bug.pic }}" />
     {% endif %}
@@ -6,10 +7,9 @@
     <hgroup>
         <h1>{{ bug.title }}</h1>
         <h2>{{ bug.votes }} votes</h2>
-        <time pubdate>{{ bug.report_date }}</time>
+        <time pubdate>{{ bug.reported_date }}</time>
     </hgroup>
-    
-    <p class="detail">{% if description %}{{ description }}{% else %}{{ bug.description }}{% endif %}</p>
-    
+    <p class="summary">{{ bug.description|truncatechars:50 }}</p>
+
     <a href="{% url view_bug slug=bug.slug %}" class="more">More information</a>
 </article>
