--- a/nhsbugs/templates/home.html
+++ b/nhsbugs/templates/home.html
@@ -11,7 +11,7 @@
 </section>
 
 <section class="newBug">
-    <h1>Submit a New Bug</h1>
+    <h1>Report a bug</h1>
 
 {% include "bugs/form.html" %}
 
