--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -26,7 +26,7 @@
         <ul>
             <li class="home"><a href="{% url home %}">Home</a></li>
             <li class="list_hospitals"><a href="{% url list_hospitals %}">Hospitals</a></li>
-            <li class=""><a href="">Submit a bug</a></li>
+            <li class=""><a href="{% url report_bug %}">Report a bug</a></li>
         </ul>
     </nav>
   </header>
