updated Karl and Colin's details

--- a/nhsbugs/templates/about.html
+++ b/nhsbugs/templates/about.html
@@ -22,13 +22,13 @@
         </tr>
         <tr>
             <td>Colin Wren</td>
-            <td>&nbsp;</td>
+            <td><a href="http://www.stgeorges.nhs.uk">St George's Healthcare NHS Trust</a></td>
             <td><a href="https://github.com/gimpneek">github.com/gimpneek</a></td>
             <td><a href="https://twitter.com/colinwren">@colinwren</a></td>
         </tr>
         <tr>
             <td>Karl Williams</td>
-            <td>&nbsp;</td>
+            <td><a href="http://www.blackgateresearch.com">Blackgate Research</a></td>
             <td><a href="https://github.com/deadlight">github.com/deadlight</a></td>
             <td><a href="https://twitter.com/karlwilliams">@karlwilliams</a></td>
         </tr>
