added footer nav

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -48,6 +48,11 @@
   <footer>
     {% block extra_footer %}
     {% endblock %}
+    <nav>
+        <ul>
+            <li><a href="/about/">About</a></li>
+        </ul>
+    </nav>
     <p>All content &copy; nhsbugs.net unless otherwise stated</p>
   </footer>
 
