--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -212,29 +212,29 @@ header {
 header h1 {
     font-weight: 300;
 }
-header nav ul:after {
+nav ul:after {
     content: '';
     width: 0;
     height: 0;
     clear: both;
     display: block;
 }
-header nav li {
+nav li {
     float: left;
     padding: 10px 20px;
     position: relative;
 }
-header nav li  a, header nav li  a:visited, header nav li  a:link, header nav li a:hover {
+nav li  a, header nav li  a:visited, header nav li  a:link, header nav li a:hover {
     color: inherit;
     text-decoration: none;
 }
-header nav li  a:hover {
+nav li  a:hover {
     color: #aaa;
 }
-header nav li:first-child {
+nav li:first-child {
     padding-left: 0;
 }
-header nav li.selected:after {
+nav li.selected:after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -246,15 +246,15 @@ header nav li.selected:after {
     border: 5px solid transparent;
     border-bottom-color: #aaa;
 }
-header nav li.selected:first-child:after {
+nav li.selected:first-child:after {
     margin-left: -10px;
 }
-header h1, header nav, .main {
+header h1, nav, .main {
     max-width: 920px;
     padding: 20px;
     margin: 0 auto;
 }
-header nav {
+nav {
     padding: 0 20px;
 }
 .main:after {
@@ -370,5 +370,6 @@ button {
     height: auto;
     color: #ffffff;
     border: none;
+    min-width: 100px;
 }
 
