--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -195,6 +195,9 @@ td { vertical-align: top; }
 }
 
 /* NHS Bugs Design & Layout */
+html {
+    background-color: #eee;
+}
 body {
     font-family: 'open sans', sans-serif;
     background-color: #fff;
@@ -225,7 +228,7 @@ nav li {
     padding: 10px 20px;
     position: relative;
 }
-nav li  a, header nav li  a:visited, header nav li  a:link, header nav li a:hover {
+nav li  a, nav li  a:visited, nav li  a:link, nav li a:hover {
     color: inherit;
     text-decoration: none;
 }
@@ -282,6 +285,7 @@ nav {
 }
 footer {
     background-color: #eee;
+    font-size: 0.9em;
     padding: 20px;
     box-shadow: inset 0 10px 10px -10px #aaa;
     text-align: center;
