--- a/nhsbugs/static/css/style.css
+++ b/nhsbugs/static/css/style.css
@@ -253,7 +253,7 @@ nav li.selected:after {
 nav li.selected:first-child:after {
     margin-left: -10px;
 }
-header h1, nav, .main {
+header h1, nav, .main, footer {
     max-width: 920px;
     padding: 20px;
     margin: 0 auto;
@@ -283,13 +283,16 @@ nav {
     padding-left: 20px;
     border-left: 2px solid #ccc;
 }
-footer {
+.bottom {
     background-color: #eee;
-    font-size: 0.9em;
-    padding: 20px;
     box-shadow: inset 0 10px 10px -10px #aaa;
-    text-align: center;
+}
+footer {
+    font-size: 0.9em;
     color: #666666;
+}
+footer nav {
+    float: left;
 }
 
 .meta {
