--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -16,6 +16,7 @@
   {% block extra_head %}
   {% endblock %}
 </head>
+
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
@@ -51,17 +52,19 @@
     {% block aside %}
     {% endblock %}
   </aside>
-  <footer>
-    {% block extra_footer %}
-    {% endblock %}
-    <nav>
-        <ul>
-            <li><a href="/about/">About</a></li>
-        </ul>
-    </nav>
-    <p>All content &copy; nhsbugs.net unless otherwise stated</p>
-  </footer>
-
+  
+  <section class="bottom">
+      <footer>
+        {% block extra_footer %}
+        {% endblock %}
+        <nav>
+            <ul>
+                <li><a href="/about/">About</a></li>
+            </ul>
+        </nav>
+        <p>All content &copy; nhsbugs.net unless otherwise stated</p>
+      </footer>
+  </section>
 
   <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
   <script>window.jQuery || document.write('<script src="{{ MEDIA_URL }}/js/libs/jquery-1.7.1.min.js"><\/script>')</script>
