--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -19,23 +19,26 @@
 
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header>
-    {% block header %}
-    <h1>NHS Bugs</h1>
-    {% endblock %}
-    <nav>
-        <ul>
-            <li class="home"><a href="{% url home %}">Home</a></li>
-            <li class="list_hospitals"><a href="{% url list_hospitals %}">Hospitals</a></li>
-            <li class="my_bugs"><a href="#">My Bugs</a></li>
-            {% if user.is_authenticated %}
-            <li>Logged in as: {{ user.username }} <a href="/logout/">Logout</a></li>
-            {% else %}
-            <li><a href="/login/">Login/Register</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-  </header>
+  <section class="top">
+      <header>
+        {% block header %}
+        <h1>NHS Bugs</h1>
+        {% endblock %}
+        <nav>
+            <ul>
+                <li class="home"><a href="{% url home %}">Home</a></li>
+                <li class="list_hospitals"><a href="{% url list_hospitals %}">Hospitals</a></li>
+                <li class="my_bugs"><a href="#">My Bugs</a></li>
+                {% if user.is_authenticated %}
+                <li>Logged in as: {{ user.username }} <a href="/logout/">Logout</a></li>
+                {% else %}
+                <li><a href="/login/">Login/Register</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+      </header>
+  </section>
+  
   <section class="main" role="main">
     {% if messages %}
     <ul class="messages">
