Updated the user has voted feature

--- a/nhsbugs/templates/bugs/detail.html
+++ b/nhsbugs/templates/bugs/detail.html
@@ -1,4 +1,4 @@
-
+{% load voting_tags %}
 <article>
     {% if bug.pic %}
         <a href="{{ MEDIA_URL }}/{{ bug.pic }}" target="_blank"><img class="thumbnail" src="{{ MEDIA_URL }}/{{ bug.pic }}" /></a>
@@ -8,10 +8,12 @@
         <h1>{{ bug.title }}</h1>
         <h2>{{ bug.hospital }}</h2>
     </hgroup>
-
+    {% if user.is_authenticated %}
+        {% vote_by_user user on bug as voted %}
+    {% endif %}
     <section class="meta">
         <span class="voting">
-{% if bug.user_voted %}
+{% if voted %}
             (voted)
 {% else %}
             <a href="{% url vote_bug slug=bug.slug score=1%}" class="up">&#9650;</a>
