Added highlighter for My Bugs once done

--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -3,6 +3,7 @@
 {% url home as home %}
 {% url list_hospitals as hospital %}
 {% url login as login %}
+{% url my_bugs as my_bugs %}
 
 
 <!doctype html>
