--- a/nhsbugs/templates/base.html
+++ b/nhsbugs/templates/base.html
@@ -1,9 +1,9 @@
 {% load active_tag %}
 
-{% url home as home %}
-{% url list_hospitals as hospital %}
-{% url login as login %}
-{% url my_bugs as my_bugs %}
+{% url home as home_x %}
+{% url list_hospitals as hospital_x %}
+{% url login as login_x %}
+{% url my_bugs as my_bugs_x %}
 
 
 <!doctype html>
@@ -35,13 +35,13 @@
         {% endblock %}
         <nav>
             <ul>
-                <li class="home {% active request home %}"><a href="{% url home %}">Home</a></li>
-                <li class="list_hospitals {% active request hospital %}"><a href="{% url list_hospitals %}">Hospitals</a></li>
-                <li class="my_bugs {% active request my_bugs %}"><a href="{% url my_bugs %}">My Bugs</a></li>
+                <li class="home {% active request home_x %}"><a href="{% url home %}">Home</a></li>
+                <li class="list_hospitals {% active request hospital_x %}"><a href="{% url list_hospitals %}">Hospitals</a></li>
+                <li class="my_bugs {% active request my_bugs_x %}"><a href="{% url my_bugs %}">My Bugs</a></li>
                 {% if user.is_authenticated %}
-                <li><span class="userInfo {% active request login %}">Logged in as: {{ user.username }}</span>(<a href="/logout/">Logout</a>)</li>
+                <li><span class="userInfo {% active request login_x %}">Logged in as: {{ user.username }}</span>(<a href="/logout/">Logout</a>)</li>
                 {% else %}
-                <li class="{% active request login %}"><a href="/login/">Login/Register</a></li>
+                <li class="{% active request login_x %}"><a href="/login/">Login/Register</a></li>
                 {% endif %}
             </ul>
         </nav>
